배차시스템, 직원관리 수정완료

--- a/dispatch/templates/dispatch/order_print.html
+++ b/dispatch/templates/dispatch/order_print.html
@@ -86,10 +86,10 @@
                     {{order.references}}
                 </div>
                 <div class="item">
-                    {{order.collection_amount}}
+                    {{collect_list|index:forloop.counter0}}
                 </div>
                 <div class="item">
-                    {{order.price|sub:order.collection_amount}}
+                    {{outstanding_list|index:forloop.counter0}}
                 </div>
                 <div class="item">
                     {% if order.VAT == 'y' %} VAT포함 {% endif %}
