--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -147,7 +147,7 @@
                     <div class="btnModules inputDelete" onclick="deleteUrl()">삭제</div>
                     <input type="hidden" name="date1" value="{{selected_date1}}">
                     <input type="hidden" name="date2" value="{{selected_date2}}">
-                    <a href="{% url 'dispatch:order' %}" class="newOrderLink">
+                    <a href="{% url 'dispatch:order' %}?date1={{date1}}&date2={{date2}}" class="newOrderLink">
                         <div class="btnModules newOrder">신규</div>
                     </a>
                     {% endif %}
@@ -168,28 +168,28 @@
                         <col style="width: 17%;">
                     </colgroup>
                     <tr>
-                        <td class="tdTypeA">출발지</td>
+                        <td class="tdTypeA">*출발지</td>
                         <td colspan="3" class="tdTypeB">
                             <div class="waypointBox">
-                                <input autocomplete="off" value="{{detail.departure}}" name="departure" type="text" class="inputText inputTextDeparture inputDeparture">
+                                <input autocomplete="off" value="{{detail.departure}}" name="departure" type="text" class="inputText inputTextDeparture length200 essential">
                                 <div class="btnModules waypoinBtn">+경유지</div>
                             </div>
                         </td>
-                        <td class="tdTypeA">계약금액</td>
+                        <td class="tdTypeA">*계약금액</td>
                         <td class="tdTypeC">
                             <input autocomplete="off" value="{{detail.price}}" name="price" type="text"
-                                class="inputText inputTextUnit inputTextPrice">원
+                                class="inputText inputTextUnit inputTextPrice length100 essential">원
                         </td>
                         <td class="tdTypeA">상여금</td>
                         <td class="tdTypeC">
                             <input autocomplete="off" value="{{detail.driver_allowance}}" name="driver_allowance" type="text"
-                                class="inputText inputTextUnit inputTextDriverAllowance" max="9999-12-31">원
+                                class="inputText inputTextUnit inputTextDriverAllowance length100" max="9999-12-31">원
                         </td>
                     </tr>
                     <tr>
-                        <td class="tdTypeA">도착지</td>
+                        <td class="tdTypeA">*도착지</td>
                         <td colspan="3" class="tdTypeB">
-                            <input autocomplete="off" value="{{detail.arrival}}" name="arrival" type="text" class="inputText inputArrival">
+                            <input autocomplete="off" value="{{detail.arrival}}" name="arrival" type="text" class="inputText inputArrival length200 essential">
                         </td>
                         <td class="tdTypeA">버스옵션</td>
                         <td colspan="3" class="tdTypeB">
@@ -212,7 +212,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="tdTypeA">운행시간</td>
+                        <td class="tdTypeA">*운행시간</td>
                         <td colspan="3" class="tdTypeB">
                             <div class="twiceBox">
                                 <div class="quarterBox">
@@ -220,10 +220,10 @@
                                         value="{{detail.departure_date|slice:':10'}}" max="9999-12-31">
                                     <div class="deeperBox">
                                         <input autocomplete="off" value="{{detail.departure_date|slice:'11:13'}}"
-                                            name="departure_time1" type="text" class="inputTextTwice" maxlength="2">
+                                            name="departure_time1" type="text" class="inputTextTwice essential" maxlength="2">
                                         :
                                         <input autocomplete="off" value="{{detail.departure_date|slice:'14:'}}" name="departure_time2"
-                                            type="text" class="inputTextTwice" maxlength="2">
+                                            type="text" class="inputTextTwice essential" maxlength="2">
                                     </div>
                                 </div>
                                 ~
@@ -232,10 +232,10 @@
                                         type="date" class="inputTextquarter" max="9999-12-31">
                                     <div class="deeperBox">
                                         <input autocomplete="off" value="{{detail.arrival_date|slice:'11:13'}}" name="arrival_time1"
-                                            type="text" class="inputTextTwice" maxlength="2">
+                                            type="text" class="inputTextTwice essential" maxlength="2">
                                         :
                                         <input autocomplete="off" value="{{detail.arrival_date|slice:'14:'}}" name="arrival_time2"
-                                            type="text" class="inputTextTwice" maxlength="2">
+                                            type="text" class="inputTextTwice essential" maxlength="2">
                                     </div>
                                 </div>
                             </div>
@@ -262,8 +262,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="tdTypeA">차량대수</td>
-                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.bus_cnt}}" name="bus_cnt" type="number" class="inputText inputTextUnit inputBusCount">대
+                        <td class="tdTypeA">*차량대수</td>
+                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.bus_cnt}}" name="bus_cnt" type="number" class="inputText inputTextUnit inputBusCount length1000 essential">대
                         </td>
                         <td class="tdTypeA">차량종류</td>
                         <td class="tdTypeC">
@@ -284,15 +284,15 @@
                             <option value="10인승 밴">10인승 밴</option>
                         </datalist>
                         </td>
-                        <td class="tdTypeA">수금구분</td>
+                        <td class="tdTypeA">*수금구분</td>
                         <td class="tdTypeC">
-                            <select name="collection_type" id="collection_type" class="inputSelect">
+                            <select name="collection_type" id="collection_type" class="inputSelect essentialSelect">
                                 <option value=""></option>
                                 <option {% if detail.collection_type == '현지수금' %} selected {% endif %} value="현지수금(카드)">현지수금(카드)</option>
-                                <option {% if detail.collection_type == '회사수금' %} selected {% endif %} value="현지수금(계좌)">회지수금(계좌)</option>
-                                <option {% if detail.collection_type == '회사수금' %} selected {% endif %} value="현지수금(현금)">회지수금(현금)</option>
+                                <option {% if detail.collection_type == '현지수금' %} selected {% endif %} value="현지수금(현금)">현지수금(현금)</option>
                                 <option {% if detail.collection_type == '회사수금' %} selected {% endif %} value="회사수금(카드)">회사수금(카드)</option>
                                 <option {% if detail.collection_type == '회사수금' %} selected {% endif %} value="회사수금(현금)">회사수금(현금)</option>
+                                <option {% if detail.collection_type == '계좌이체' %} selected {% endif %} value="계좌이체">계좌이체</option>
                             </select>
                         </td>
                         <td class="tdTypeA">VAT 포함</td>
@@ -306,20 +306,20 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="tdTypeA">예약자</td>
+                        <td class="tdTypeA">*예약자</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="inputText">
+                            <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="inputText length100 essential">
                         </td>
-                        <td class="tdTypeA">전화번호</td>
-                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.customer_phone}}" name="customer_phone" type="text" class="inputText inputTextPhoneNum" maxlength="13">
+                        <td class="tdTypeA">*전화번호</td>
+                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.customer_phone}}" name="customer_phone" type="text" class="inputText inputTextPhoneNum essential" maxlength="13">
                         </td>
                         <td class="tdTypeA">표찰정보</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" name="ticketing_info" type="text" value="{{detail.ticketing_info}}" class="inputText">
+                            <input autocomplete="off" name="ticketing_info" type="text" value="{{detail.ticketing_info}}" class="inputText length100">
                         </td>
-                        <td class="tdTypeA">유형</td>
+                        <td class="tdTypeA">*유형</td>
                         <td class="tdTypeC">
-                            <select name="order_type" id="type" class="inputSelect">
+                            <select name="order_type" id="type" class="inputSelect essentialSelect">
                                 <option value=""></option>
                                 <option {% if detail.order_type == '워크샵' %} selected {% endif %} value="워크샵">워크샵</option>
                                 <option {% if detail.order_type == '학단' %} selected {% endif %} value="학단">학단</option>
@@ -341,21 +341,20 @@
                                 <option {% if detail.contract_status == '취소' %} selected {% endif %} value="취소">취소</option>
                             </select>
                         </td>
-                        <td class="tdTypeA">운행종류</td>
+                        <td class="tdTypeA">*운행종류</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" value="{{detail.operation_type}}" name="operation_type" id="drive_type" type="text" list="driveType" class="inputText">
-                            <datalist id="driveType" class="inputSelect">
+                            <select name="operation_type" id="drive_type" class="inputSelect essentialSelect">
                                 <option value=""></option>
-                                <option value="왕복">왕복</option>
-                                <option value="편도출발">편도출발</option>
-                                <option value="편도복귀">편도복귀</option>
-                                <option value="기사동행(1박2일)">기사동행(1박2일)</option>
-                                <option value="기사동행(2박3일)">기사동행(2박3일)</option>
-                                <option value="기사동행(전체일정)">기사동행(전체일정)</option>
-                            </datalist>
+                                <option {% if detail.operation_type == '왕복' %} selected {% endif %} value="왕복">왕복</option>
+                                <option {% if detail.operation_type == '편도출발' %} selected {% endif %} value="편도출발">편도출발</option>
+                                <option {% if detail.operation_type == '편도복귀' %} selected {% endif %} value="편도복귀">편도복귀</option>
+                                <option {% if detail.operation_type == '기사동행(1박2일)' %} selected {% endif %} value="기사동행(1박2일)">기사동행(1박2일)</option>
+                                <option {% if detail.operation_type == '기사동행(2박3일)' %} selected {% endif %} value="기사동행(2박3일)">기사동행(2박3일)</option>
+                                <option {% if detail.operation_type == '기사동행(전체일정)' %} selected {% endif %} value="기사동행(전체일정)">기사동행(전체일정)</option>
+                            </select>
                         </td>
                         <td class="tdTypeA">참조사항</td>
-                        <td colspan="3" class="tdTypeB"><input autocomplete="off" value="{{detail.references}}" name="references" type="text" class="inputText">
+                        <td colspan="3" class="tdTypeB"><input autocomplete="off" value="{{detail.references}}" name="references" type="text" class="inputText length100">
                         </td>
                     </tr>
                 </table>
@@ -406,19 +405,17 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="tdTypeA">계약금액</td>
-                                        <td class="tdTypeB">
-                                            <input autocomplete="off" value="{{i.price}}" name="price" type="text" class="inputText inputTextUnit dispatchPrice">원</td>
-                                        </td>
                                         <td class="tdTypeA">상여금</td>
                                         <td class="tdTypeB">
-                                            <input autocomplete="off" value="{{i.driver_allowance}}" name="driver_allowance" type="text" class="inputText inputTextUnit dispatchPaymen">원</td>
+                                            <input autocomplete="off" value="{{i.driver_allowance}}" name="driver_allowance" type="text" class="inputText inputTextUnit dispatchPaymen length100">원</td>
                                         </td>
                                         <td class="tdTypeA">상여지급</td>
                                         <td class="tdTypeB">
                                             <input autocomplete="off" {% if i.payment_method == 'y' %} checked {% endif %} name="payment_method{{forloop.counter0}}" value="y" type="checkbox" class="dispatchPaymentCheckbox">
                                             <label for="">선지급</label>
                                         </td>
+                                        <td class="tdTypeA tdWhiteSpace"></td>
+                                        <td class="tdTypeB tdWhiteSpace"></td>
                                     </tr>
                                     <input autocomplete="off" name="bus" value="{{i.bus_id.id}}" type="hidden" class="hiddenBus">
                                     <input autocomplete="off" name="id" value="{{detail.id}}" type="hidden">
@@ -458,10 +455,6 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td class="tdTypeA">계약금액</td>
-                                        <td class="tdTypeC">
-                                            <input autocomplete="off" name="price" type="text" class="inputText inputTextUnit dispatchPrice dispatchPriceBlank">원</td>
-                                        </td>
                                         <td class="tdTypeA">상여금</td>
                                         <td class="tdTypeC">
                                             <input autocomplete="off" name="driver_allowance" type="text" class="inputText inputTextUnit dispatchPaymen dispatchPaymenBlank">원</td>
@@ -471,6 +464,8 @@
                                             <input autocomplete="off" {% if i.payment_method == 'y' %} checked {% endif %} name="payment_method{{forloop.counter0|add:detail_connect_list.count}}" value='y' type="checkbox" class="dispatchPaymentCheckbox">
                                             <label for="">선지급</label>
                                         </td>
+                                        <td class="tdTypeA tdWhiteSpace"></td>
+                                        <td class="tdTypeB tdWhiteSpace"></td>
                                     </tr>
                                     <input autocomplete="off" name="bus" type="hidden" class="hiddenBus">
                                     <input autocomplete="off" name="id" value="{{detail.id}}" type="hidden">
@@ -638,8 +633,8 @@
                 <div class="popupArticleCategori">경유지 정보</div> 
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">경유지</label>
-                        <input autocomplete="off" type="text" class="popupArticleinput waypointInput">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>경유지</label>
+                        <input autocomplete="off" type="text" class="popupArticleinput waypointInput length100">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">시간</label>
@@ -649,7 +644,7 @@
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">인솔자</label>
-                        <input autocomplete="off" type="text" class="popupArticleinput delegateInput">
+                        <input autocomplete="off" type="text" class="popupArticleinput delegateInput length100">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">전화번호</label>
@@ -758,6 +753,6 @@
 <script src="{% static 'js/dispatch/order/FullSchedule.js' %}"></script>
 <script src="{% static 'js/dispatch/order/matchDispatch.js' %}"></script>
 <script src="{% static 'js/dispatch/order/waypoint.js' %}"></script>
-<script src="{% static 'js/dispatch/order/lengthBreak.js' %}"></script>
+<script src="{% static 'js/dispatch/order/dateFollow.js' %}"></script>
 
 {% endblock %}
