--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1068,6 +1068,11 @@ html::-webkit-scrollbar-track {
   right: 2%;
 }
 
+.importantStar{
+  color: red;
+}
+/* <span class="importantStar">*</span> */
+
 
 
 
