--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -229,6 +229,11 @@
   font-size: 1.4rem;
 }
 
+.tdWhiteSpace{
+  background-color: transparent;
+  border: none;
+}
+
 .inputTableBox input[type=checkbox] {
   margin: 0;
   margin-left: 0.6rem;
