--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -102,14 +102,14 @@
 
 
 
-.search-Container{
+.search-Container {
     height: 4.8rem;
     padding: 0 2rem;
     box-shadow: 0.1rem 0.1rem 0.1rem rgba(65, 69, 73, 0.3),
-    0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
+        0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
 }
 
-.search-Form_input{
+.search-Form_input {
     width: 26rem;
     height: 3.2rem;
     border-radius: 0.5rem;
@@ -142,13 +142,13 @@
     box-sizing: border-box;
 }
 
-.member-upload{
+.member-upload {
     margin-right: 0;
     background-color: #107C41;
     color: white;
 }
 
-.popup-area-box_btn_create{
+.popup-area-box_btn_create {
     width: auto;
     height: 2.8rem;
     padding: 0.4rem 1.6rem;
@@ -159,6 +159,31 @@
     margin-right: 1.2rem;
     cursor: pointer;
     box-sizing: border-box;
+}
+
+.popupArticleDouble .PopupDataInputEmergency {
+    width: 14.8rem;
+}
+
+.popupArticleDouble .PopupDataInputEmergencyRelation {
+    width: 8rem;
+}
+
+.popupArticleDouble .hrEmergency {
+    width: 14.8rem;
+}
+
+.popupArticleDouble .hrEmergencyRelation {
+    width: 8rem;
+}
+
+.popupArticleDouble .popupArticleLabelRelation {
+    width: 4rem;
+    margin-left: 1.2rem;
+}
+
+.memberOpenPrint{
+    color: #0069D9;
 }
 
 
@@ -174,11 +199,11 @@
     height: 74rem;
     border-radius: 0.2rem;
     box-shadow: 0.1rem 0.1rem 0.1rem rgba(65, 69, 73, 0.3),
-    0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
+        0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
     background-color: white;
 }
 
-.ListHeaderArea{
+.ListHeaderArea {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -188,7 +213,7 @@
     padding: 0 2rem;
 }
 
-.ListHeaderTitle{
+.ListHeaderTitle {
     font-size: 1.6rem;
     font-weight: 700;
 }
@@ -222,7 +247,8 @@
     background-color: #ED5565;
     color: white;
 }
-.member-delete:hover{
+
+.member-delete:hover {
     background-color: #DC1E1E;
 }
 
@@ -245,12 +271,12 @@ thead .member-height {
     color: white;
 }
 
-thead .member-height td{
+thead .member-height td {
     border-top: 0.1rem solid #ABABAB;
     border-bottom: 0.1rem solid #ABABAB;
 }
 
-.member-height td{
+.member-height td {
     text-align: left;
     padding: 0;
 }
@@ -258,25 +284,25 @@ thead .member-height td{
 .member-height td:nth-child(1),
 .member-height td:nth-child(2),
 .member-height td:nth-last-child(1),
-.member-height td:nth-last-child(2){
+.member-height td:nth-last-child(2) {
     text-align: center;
 }
 
-.table-list_head-tr_td:nth-child(6){
+.table-list_head-tr_td:nth-child(5) {
     cursor: pointer;
 }
 
-.table-list_body-tr{
+.table-list_body-tr {
     border: none;
 }
 
 .table-list_body-tr td,
 .table-list_body-tr td:nth-child(1),
-.table-list_body-tr td:nth-last-child(1){
+.table-list_body-tr td:nth-last-child(1) {
     border: none;
 }
 
-.table-list_body-tr:nth-child(even){
+.table-list_body-tr:nth-child(even) {
     background-color: #EFF0F2;
 }
 
@@ -295,31 +321,32 @@ tbody .member-height {
     width: 4%;
 }
 
-.member-height td:nth-child(5),
-.member-height td:nth-child(7){
-    width: 6%;
-}
-.member-height td:nth-child(8){
-    width: 8%;
-}
-.member-height td:nth-child(9) {
-    width: 10%;
-}
-
 .member-height td:nth-child(6) {
     width: 6%;
 }
 
-.member-height td:nth-child(10) {
+.member-height td:nth-child(7) {
+    width: 10%;
+}
+
+.member-height td:nth-child(8) {
+    width: 12%;
+}
+
+.member-height td:nth-child(5) {
     width: 6%;
 }
 
-.member-height td:nth-child(11) {
-    width: 22%;
+.member-height td:nth-child(9) {
+    width: 6%;
 }
 
-.member-height td:nth-child(12),
-.member-height td:nth-child(13) {
+.member-height td:nth-child(10) {
+    width: 24%;
+}
+
+.member-height td:nth-child(11),
+.member-height td:nth-child(12) {
     width: 10%;
 }
 
@@ -329,17 +356,17 @@ tbody .member-height {
 }
 
 .table-list_body-tr_td:nth-child(3),
-.table-list_body-tr_td:nth-child(12),
-.table-list_body-tr_td:nth-child(13) {
+.table-list_body-tr_td:nth-child(11),
+.table-list_body-tr_td:nth-child(12) {
     cursor: pointer;
 }
 
-.tdDisplay{
+.tdDisplay {
     display: flex;
     align-items: center;
 }
 
-.option-order{
+.option-order {
     width: 0;
     height: 0;
     border-top: 1rem solid white;
@@ -376,7 +403,7 @@ tbody .member-height {
     cursor: pointer;
 }
 
-.pagenation-numbering-box{
+.pagenation-numbering-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -388,18 +415,18 @@ tbody .member-height {
     cursor: pointer;
 }
 
-.thisPage{
+.thisPage {
     color: #61B4E5;
     font-weight: 700;
 }
 
-.popupArticleUpload{
+.popupArticleUpload {
     position: relative;
     display: flex;
     width: 50rem;
 }
 
-.popupArticleUpload label{
+.popupArticleUpload label {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -415,7 +442,7 @@ tbody .member-height {
 
 .uploadFileText,
 .uploadLicenseFileText,
-.uploadDriverLicenseFileText{
+.uploadDriverLicenseFileText {
     width: 41rem;
     padding-left: 1rem;
     padding-right: 2rem;
@@ -429,11 +456,11 @@ tbody .member-height {
 
 .uploadFile,
 .uploadLicenseFile,
-.uploadDriverLicenseFile{
+.uploadDriverLicenseFile {
     display: none;
 }
 
-.uploadDeleteBtn{
+.uploadDeleteBtn {
     position: absolute;
     top: 50%;
     right: 0;
@@ -441,16 +468,23 @@ tbody .member-height {
     cursor: pointer;
 }
 
-.saveUpload{
+.saveUpload {
     margin-right: 1rem;
     background-color: #0069D9;
 }
 
-.uploadFormat{
+.uploadFormat {
     position: absolute;
     left: 2rem;
     background-color: #444444;
 }
-.uploadFormat{
+
+.uploadFormat {
     color: white;
+}
+
+.memberEditSaveBtn,
+.btnModulesCreate {
+    background-color: #0069D9;
+    margin-right: 1rem;
 }
