--- a/templates/base.html
+++ b/templates/base.html
@@ -448,6 +448,10 @@
   <script src="{% static 'js/sideNavMenu.js' %}"></script>
   <script src="{% static 'js/profile.js' %}"></script>
   <script src="{% static 'js/accountPopup.js' %}"></script>
+  <script src="{% static 'js/lengthbreak100.js' %}"></script>
+  <script src="{% static 'js/lengthbreak200.js' %}"></script>
+  <script src="{% static 'js/lengthbreak1000.js' %}"></script>
+  <script src="{% static 'js/lengthBreak3000.js' %}"></script>
   {% block script %}{% endblock %}
 </body>
 
